@@ -30,7 +30,7 @@ gboolean
 img_prepare_pixbufs( img_window_struct *img,
 
 					 gboolean           preview );
-guint
+gdouble
 img_calc_next_slide_time_offset( img_window_struct *img,
 								 gdouble            rate );
 
